fixing menu on iPhone/iPad

--- a/content/css/core.css
+++ b/content/css/core.css
@@ -244,7 +244,7 @@ body{
     background: #f4f4f4; /* Old browsers */
 
     width: 100%;
-
+    height: 480px;
     overflow: auto;
 
     -moz-border-radius: 5px;
